--- a/index.html
+++ b/index.html
@@ -1,1 +1,150 @@
-CV
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Kutsyn Vyacheslav</title>
+    <style>
+        a {
+            color: blue;
+        }
+        abbr {
+            border-bottom: 1px dotted;
+        }
+        body {
+            font-family: Helvetica, serif;
+            padding: 3em;
+        }
+        h2 {
+            font-weight: normal;
+        }
+        h3 {
+            margin-top: 1em;
+            margin-bottom: 0.5em;
+        }
+        sup {
+            font-size: small;
+            vertical-align: 1.2em;
+        }
+        .edu, .work, .achiev {
+            padding-left: 0.7em;
+        }
+        td {
+            vertical-align: top;
+        }
+        td, h1, h2, h3, li {
+            page-break-after: avoid;
+        }
+        .edu td, .work td, .achiev td {
+            padding-left: 1em;
+        }
+        .time, .place {
+            font-weight: bold;
+        }
+        .time {
+            white-space: nowrap;
+        }
+        .contact-info {
+            float: right;
+            padding-left: 1em;
+            border-left: dashed 1px gray;
+            width: 33%;
+        }
+        ul { margin-top: 0; }
+        .li-number {
+            text-align: right;
+        }
+        p {
+            margin-top: 0;
+        }
+    </style>
+    </head>
+    <body>
+        <div class="contact-info">
+            <table>
+                <tbody>
+                    <tr>
+                        <td colspan="2">
+                            <h3>Contact Info</h3>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Tel.</td>
+                        <td>097 310 36 43</td>
+                    </tr>
+                    <tr>
+                        <td>Residence</td>
+                        <td>Kharkiv, Ukraine</td>
+                    </tr>
+                    <tr>
+                        <td>E-mail</td>
+                        <td><a href="mailto:kvpdotnet@gmail.com">kvpdotnet@gmail.com</a></td>
+                    </tr>
+                    <tr>
+                        <td>Telegram</td>
+                        <td><a href="https://telegram.me/kvpdotnet">kvpdotnet</a></td>
+                    </tr>
+                    <tr>
+                        <td>GitHub</td>
+                        <td><a href="https://github.com/Hotriden">Hotriden</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <h1>Kutsyn Vyacheslav</h1>
+        <hr style="height: 0; border-top: solid 1px black; border-bottom: none;">
+        <h3>Aim on</h3>
+        <dl>
+            <dd>
+                <p>Get a job as .NET developer</p>
+            </dd>
+        </dl>
+        <h3>Competencies</h3>
+        <dl>
+            <dd>
+                <p>Web backend (Asp.Net Core, Asp.Net MVC), User interface (ReactJS)</p>
+                <p>Coding, Deployment (AWS/Azure), Testing (MOQ)</p>
+            </dd>
+        </dl>
+        <h3>Projects</h3>
+        <dl>
+            <dd>
+                <p><a href="https://yoba.netlify.app">YOBA - Your Own Business Application</a> - CRM. <span class="place">Based on ASP.NET Core 3.0 WebApi + ReactJS</span></p>
+                <p><a href="https://github.com/Hotriden/CheckSitemapApp">Check Site Map</a> - Analyze website sitemap.xml. <span class="place">Based on ASP.NET MVC5</span></p>
+                <p><a href="https://github.com/Hotriden/CurrentTelegram_Bot">Telegramm bot</a> - Parse currency exchange rates. <span class="place">Based on ASP.NET MVC5</span></p>
+            </dd>
+        </dl>
+        <h4>Key Technologies</h4>
+        <dl>
+            <dd>C#, Web (JS, Html, Css, Libraries)</dd>
+        </dl>
+        <h3>Work Experience</h3>
+        <table class="work">
+            <tbody>
+                <tr>
+                    <td>
+                        <p>started <span class="time">Jul 2017</span><br>(Up to now)</p>
+                    </td>
+                    <td>
+                        <p>Financial analyst<br>at <span class="place">LTD Sigma Ukraine</span></p>
+                        <p>Algorithmization of business processes, finance analyze, budgeting, investment projects</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Education</h3>
+        <table class="edu">
+            <tbody>
+                <tr>
+                    <td>
+                        <p><span class="time">2013</span></p>
+                    </td>
+                    <td>
+                        <p><span class="place">O.M. Beketov National University</span>,<br>Faculty of economy and business</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        </tbody>
+    </table>
+</body>
+</html>
