--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <tbody>
                     <tr>
                         <td colspan="2">
-                            <h3>Contact Info</h3>
+                            <h3>Contacts</h3>
                         </td>
                     </tr>
                     <tr>
@@ -108,9 +108,10 @@
         <h3>Projects</h3>
         <dl>
             <dd>
-                <p><a href="https://yoba.netlify.app">YOBA - Your Own Business Application</a> - CRM. <span class="place">Based on ASP.NET Core 3.0 WebApi + ReactJS</span></p>
-                <p><a href="https://github.com/Hotriden/CheckSitemapApp">Check Site Map</a> - Analyze website sitemap.xml. <span class="place">Based on ASP.NET MVC5</span></p>
-                <p><a href="https://github.com/Hotriden/CurrentTelegram_Bot">Telegramm bot</a> - Parse currency exchange rates. <span class="place">Based on ASP.NET MVC5</span></p>
+                <p><a href="https://github.com/Hotriden/YOBA">YOBA - Your Own Business Application</a> - CRM Core. <span class="place">Part of application based on ASP.NET Core 3.0 Web Api.</span></p>
+                <p><a href="https://github.com/Hotriden/YOBA_UI">YOBA - Your Own Business Application</a> - CRM <a href="https://yoba.netlify.app/">UI</a>. <span class="place">Part of application based on ReactJS</span></p>
+                <p><a href="https://github.com/Hotriden/CheckSitemapApp">Check Site Map</a> - Sitemap.xml analyzer. <span class="place">ASP.NET MVC5</span></p>
+                <p><a href="https://github.com/Hotriden/CurrentTelegram_Bot">Telegramm bot</a> - Currency exchange rates parser. <span class="place">ASP.NET MVC5</span></p>
             </dd>
         </dl>
         <h4>Key Technologies</h4>
