--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <dl>
             <dd>
                 <p>Web backend (Asp.Net Core, Asp.Net MVC), User interface (ReactJS)</p>
-                <p>Coding, Deployment (AWS/Azure), Testing (MOQ)</p>
+                <p>Coding, Deployment, Testing</p>
             </dd>
         </dl>
         <h3>Projects</h3>
@@ -116,7 +116,7 @@
         </dl>
         <h4>Key Technologies</h4>
         <dl>
-            <dd>C#, Web (JS, Html, Css, Libraries)</dd>
+            <dd>C#, Web (JS, Html, Css, Libraries), ORM (EF, Dapper), DataBases (MsSql), VCS(Git)</dd>
         </dl>
         <h3>Work Experience</h3>
         <table class="work">
