--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                         <td>GitHub</td>
                         <td><a href="https://github.com/Hotriden">Hotriden</a></td>
                     </tr>
+                    <tr>
+                        <td>GitLab</td>
+                        <td><a href="https://gitlab.com/Rifterftw">Hotride</a></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -101,37 +105,52 @@
         <h3>Competencies</h3>
         <dl>
             <dd>
-                <p>Web backend (Asp.Net Core, Asp.Net MVC), User interface (ReactJS)</p>
                 <p>Coding, Deployment, Testing</p>
             </dd>
         </dl>
-        <h3>Projects</h3>
         <dl>
             <dd>
-                <p><a href="https://github.com/Hotriden/YOBA">YOBA - Your Own Business Application</a> - CRM Core. <span class="place">Part of application based on ASP.NET Core 3.0 Web Api.</span></p>
-                <p><a href="https://github.com/Hotriden/YOBA_UI">YOBA - Your Own Business Application</a> - CRM <a href="https://yoba.netlify.app/">UI</a>. <span class="place">Part of application based on ReactJS</span></p>
-                <p><a href="https://github.com/Hotriden/CheckSitemapApp">Check Site Map</a> - Sitemap.xml analyzer. <span class="place">ASP.NET MVC5</span></p>
-                <p><a href="https://github.com/Hotriden/CurrentTelegram_Bot">Telegramm bot</a> - Currency exchange rates parser. <span class="place">ASP.NET MVC5</span></p>
             </dd>
         </dl>
         <h4>Key Technologies</h4>
         <dl>
-            <dd>C#, Web (JS, Html, Css, Libraries), ORM (EF, Dapper), DataBases (MsSql), VCS(Git)</dd>
+            <dd>C# (ASP.Net Core, ASP.Net MVC), Web (ReactJS, Html, Css), ORM (EF, Dapper), DataBases (MsSql), VCS(Git)</dd>
         </dl>
         <h3>Work Experience</h3>
         <table class="work">
             <tbody>
                 <tr>
                     <td>
-                        <p>started <span class="time">Jul 2017</span><br>(Up to now)</p>
+                        <p>started <span class="time">Jul 2017</span><br><span class="time">(Up to now)</span></p>
                     </td>
                     <td>
-                        <p>Financial analyst<br>at <span class="place">LTD Sigma Ukraine</span></p>
+                        <p>Full-time job as Financial analyst<br>at LTD Sigma Ukraine</p>
                         <p>Algorithmization of business processes, finance analyze, budgeting, investment projects</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>started <span class="time">May 2019</span><br>finished <span class="time">Dec 2019</span></p>
+                    </td>
+                    <td>
+                        <p>Half-time job as Freelancer<br>at Freelancer.com, Upwork.com</p>
+                        <p>Worked on different projects as C# developer</p>
                     </td>
                 </tr>
             </tbody>
         </table>
+        <h3>Languages</h3> 
+        <dl>
+            <dd>
+                <p>English - b1/b2</p>
+            </dd>
+            <dd>
+                <p>Russian - native</p>
+            </dd>
+            <dd>
+                <p>Ukrainian - c2</p>
+            </dd>
+        </dl>
         <h3>Education</h3>
         <table class="edu">
             <tbody>
