--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Kutsyn Vyacheslav</title>
+        <title>Kutsyn Viacheslav</title>
     <style>
         a {
             color: blue;
@@ -25,7 +25,7 @@
             font-size: small;
             vertical-align: 1.2em;
         }
-        .edu, .work, .achiev {
+        .edu, .work, .achiev, .skills {
             padding-left: 0.7em;
         }
         td {
@@ -34,7 +34,7 @@
         td, h1, h2, h3, li {
             page-break-after: avoid;
         }
-        .edu td, .work td, .achiev td {
+        .edu td, .work td, .achiev td, .skills td {
             padding-left: 1em;
         }
         .time, .place {
@@ -49,12 +49,15 @@
             border-left: dashed 1px gray;
             width: 33%;
         }
-        ul { margin-top: 0; }
+        ul {
+            margin-top: 0; 
+        }
         .li-number {
             text-align: right;
         }
-        p {
-            margin-top: 0;
+        li {
+            margin-top: 1em;
+            margin-bottom: 0.5em;
         }
     </style>
     </head>
@@ -84,57 +87,99 @@
                         <td><a href="https://telegram.me/kvpdotnet">kvpdotnet</a></td>
                     </tr>
                     <tr>
-                        <td>GitHub</td>
-                        <td><a href="https://github.com/Hotriden">Hotriden</a></td>
-                    </tr>
-                    <tr>
-                        <td>GitLab</td>
-                        <td><a href="https://gitlab.com/Rifterftw">Hotride</a></td>
+                        <td>LinkedIn</td>
+                        <td><a href="https://www.linkedin.com/in/vyacheslav-kutsyn-508932220/">Viacheslav Kutsyn</a></td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <h1>Kutsyn Vyacheslav</h1>
+        <h1>Kutsyn Viacheslav</h1>
         <hr style="height: 0; border-top: solid 1px black; border-bottom: none;">
-        <h3>Aim on</h3>
+        <h3>Personal info</h3>
         <dl>
             <dd>
-                <p>Get a job as .NET developer</p>
+                <p>Experienced Software Web Developer adept in bringing forth expertise in design, installation and maintenance of software systems. 
+                    Able to effectively self-manage during independent projects, as well as collaborate as part of a productive team. 
+                    Skilled with the latest cutting edge development tools and procedures.
+                </p>
             </dd>
         </dl>
-        <h3>Competencies</h3>
+        <h3>Tech skills</h4>
         <dl>
-            <dd>
-                <p>Coding, Deployment, Testing</p>
-            </dd>
-        </dl>
-        <dl>
-            <dd>
-            </dd>
-        </dl>
-        <h4>Key Technologies</h4>
-        <dl>
-            <dd>C# (ASP.Net Core, ASP.Net MVC), Web (ReactJS, Html, Css), ORM (EF, Dapper), DataBases (MsSql), VCS(Git)</dd>
+            <table class="skills">
+                <tbody>
+                    <tr>
+                        <td>
+                            <p><span class="time">.NET</span></p>
+                        </td>
+                        <td>
+                            <li>Azure Service App</li>
+                            <li>Azure Function</li>
+                            <li>.NET Core Web Api</li>
+                            <li>ASP.NET MVC5</li>
+                        </td>
+                        <td>
+                            <p><span class="time">Databases</span></p>
+                        </td>
+                        <td>
+                            <li>MsSql</li>
+                            <li>MongoDb</li>
+                            <li>SqlLite</li>
+                            <li>Redis</li>
+                        </td>
+                        <td>
+                            <p><span class="time">Additional skills</span></p>
+                        </td>
+                        <td>
+                            <li>ORM - EF, Dapper</li>
+                            <li>VCS - Git</li>
+                            <li>Unit tests</li>
+                            <li>Terraform</li>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><span class="time">Front end</span></p>
+                        </td>
+                        <td>
+                            <li>AngularTS</li>
+                            <li>ReactJS</li>
+                        </td>
+                        <td>
+                            <p><span class="time">Cloud services</span></p>
+                        </td>
+                        <td>
+                            <li>Azure</li>
+                            <li>AWS</li>
+                        </td>
+                        <td>
+                            <p><span class="time">Architecture approaches</span></p>
+                        </td>
+                        <td>
+                            <li>Microservices</li>
+                            <li>Monolith</li>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </dl>
         <h3>Work Experience</h3>
         <table class="work">
             <tbody>
                 <tr>
                     <td>
-                        <p>started <span class="time">Jul 2017</span><br><span class="time">(Up to now)</span></p>
+                        <p>started <span class="time">Mar 2011</span><br>finished <span class="time">Present</span></p>
                     </td>
                     <td>
-                        <p>Full-time job as Financial analyst<br>at LTD Sigma Ukraine</p>
-                        <p>Algorithmization of business processes, finance analyze, budgeting, investment projects</p>
+                        <p>.NET Full stack developer<br>at <span class='place'>IT Craft</span></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>started <span class="time">May 2019</span><br>finished <span class="time">Dec 2019</span></p>
+                        <p>started <span class="time">Jun 2018</span><br>finished <span class="time">Oct 2020</span></p>
                     </td>
                     <td>
-                        <p>Half-time job as Freelancer<br>at Freelancer.com, Upwork.com</p>
-                        <p>Worked on different projects as C# developer</p>
+                        <p>Freelancer<br>at <span class='place'>Upwork.com</span></p>
                     </td>
                 </tr>
             </tbody>
@@ -142,13 +187,10 @@
         <h3>Languages</h3> 
         <dl>
             <dd>
-                <p>English - b1/b2</p>
+                <p>English - B2</p>
             </dd>
             <dd>
-                <p>Russian - native</p>
-            </dd>
-            <dd>
-                <p>Ukrainian - c2</p>
+                <p>Ukrainian - Native</p>
             </dd>
         </dl>
         <h3>Education</h3>
@@ -159,7 +201,7 @@
                         <p><span class="time">2013</span></p>
                     </td>
                     <td>
-                        <p><span class="place">O.M. Beketov National University</span>,<br>Faculty of economy and business</p>
+                        <p><span class="place">O.M. Beketov National University</span>,<br>Master of economics and business</p>
                     </td>
                 </tr>
             </tbody>
